--- a/util/Makefile
+++ b/util/Makefile
@@ -2,15 +2,16 @@
 
 #	last edit:	85/03/14	Gary S. Moss
 
-#	SCCS ID:	@(#)Makefile	1.5
+#	SCCS ID:	@(#)Makefile	1.6
 
-PRODUCT	= pp-fb pc-fb fbclear fbgrid rle-fb fb-rle fbcmap
+PRODUCT	= pp-fb fbclear fbgrid rle-fb fb-rle fbcmap
 HEADERS =
-CFILES	= pp-fb.c pc-fb.c fbclear.c fbgrid.c rle-fb.c fb-rle.c\
-	fbcmap.c fbzoom.c termio.c
-OBJS	= pp-fb.o pc-fb.o fbclear.o fbgrid.o rle-fb.o fb-rle.o\
-	fbcmap.o fbzoom.o termio.o
-BINDIR	= /usr/brl/bin
+CFILES	= pp-fb.c fbclear.c fbgrid.c rle-fb.c fb-rle.c fbcmap.c fbzoom.c\
+	termio.c
+OBJS	= pp-fb.o fbclear.o fbgrid.o rle-fb.o fb-rle.o fbcmap.o fbzoom.o\
+	termio.o
+#/usr/brl/bin eventually
+BINDIR	= /vld/moss/bin
 LIBDIR	= /vld/lib
 INCDIR	= /vld/include
 MANDIR	= /usr/man/man1
@@ -26,14 +27,14 @@ INS	= cp
 	$(GET) $(GFLAGS) -p s.$@ > ${TESTDIR}/$@
 	touch $@
 
-all:	fbzoom ${PRODUCT} ${MANUAL}
+all:	fbzoom ${PRODUCT} # ${MANUAL}
 
 ${PRODUCT}:	$$@.o
 	$(CC) -o $@ ${LDFLAGS} $@.o ${LIBES} 
 	size $@
 	touch $@
 
-fbzoom: termio.o
+fbzoom: fbzoom.o termio.o
 	$(CC) -o $@ ${LDFLAGS} $@.o termio.o ${LIBES} 
 	size $@
 	touch $@
@@ -57,16 +58,16 @@ compare:	all
 	cmp ${MANDIR}/${MANUAL} ${MANUAL}
 
 install:	all
-	${INS} ${PRODUCT} ${BINDIR}
-	chmod ${BINPERM} ${BINDIR}/${PRODUCT}
-	${INS} ${MANUAL} ${MANDIR}/${MANUAL}
-	chmod ${MANPERM} ${MANDIR}/${MANUAL}
+	${INS} ${PRODUCT} fbzoom ${BINDIR}
+	for i in ${PRODUCT} fbzoom ; \
+	do	chmod ${BINPERM} $$i ; \
+	done
+#	${INS} ${MANUAL} ${MANDIR}/${MANUAL}
+#	chmod ${MANPERM} ${MANDIR}/${MANUAL}
 
 clean:
 	-if vax; then rm -f ${HEADERS} ${CFILES}; fi
-	-rm -f ${OBJS} ${PRODUCT}.lint \
-		${PRODUCT}.flow ${PRODUCT}.xref \
-		${PRODUCT}.out ${PRODUCT}.err
+	-rm -f ${OBJS}
 
 clobber:	clean
 	-if vax; then rm -f ${MANUAL}; fi
@@ -85,4 +86,34 @@ depend	: ${CFILES} ${HEADERS}
 
 # File Relationships
 # DO NOT DELETE THIS LINE -- make depends on it.
-# This line will be replaced by your file dependencies.
+pp-fb.o: pp-fb.c
+pp-fb.o: /usr/5include/stdio.h
+pp-fb.o: /vld/include/fb.h
+fbclear.o: fbclear.c
+fbclear.o: /usr/5include/stdio.h
+fbclear.o: /vld/include/std.h
+fbclear.o: /vld/include/fb.h
+fbgrid.o: fbgrid.c
+fbgrid.o: /usr/5include/stdio.h
+fbgrid.o: /vld/include/fb.h
+rle-fb.o: rle-fb.c
+rle-fb.o: /usr/5include/stdio.h
+rle-fb.o: /usr/5include/string.h
+rle-fb.o: /vld/include/fb.h
+fb-rle.o: fb-rle.c
+fb-rle.o: /usr/5include/stdio.h
+fb-rle.o: /vld/include/fb.h
+fbcmap.o: fbcmap.c
+fbcmap.o: /usr/5include/stdio.h
+fbcmap.o: /vld/include/fb.h
+fbzoom.o: fbzoom.c
+fbzoom.o: /usr/5include/stdio.h
+fbzoom.o: /vld/include/fb.h
+termio.o: termio.c
+termio.o: /usr/5include/stdio.h
+termio.o: /usr/5include/sys/ioctl.h
+termio.o: /usr/5include/fcntl.h
+termio.o: /usr/5include/termio.h
+termio.o: /usr/5include/sys/termio.h
+termio.o: /usr/5include/sys/_ioctl.h
+termio.o: /usr/5include/memory.h
